--- a/packages/board/package.json
+++ b/packages/board/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idraw/board",
-  "version": "0.3.1",
+  "version": "0.3.2-alpha.0",
   "description": "",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -21,10 +21,10 @@
   "author": "chenshenhai",
   "license": "MIT",
   "devDependencies": {
-    "@idraw/types": "^0.3.1"
+    "@idraw/types": "^0.3.2-alpha.0"
   },
   "dependencies": {
-    "@idraw/util": "^0.3.1"
+    "@idraw/util": "^0.3.2-alpha.0"
   },
   "publishConfig": {
     "access": "public"
