--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@idraw/types",
-  "version": "0.3.1",
+  "version": "0.3.2-alpha.0",
   "description": "",
   "main": "src/index.ts",
   "types": "src/index.ts",
