--- a/packages/util/package.json
+++ b/packages/util/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@idraw/util",
-  "version": "0.3.2-alpha.0",
+  "name": "@idraw_zyh/util",
+  "version": "0.3.2",
   "description": "",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -21,10 +21,10 @@
   "author": "chenshenhai",
   "license": "MIT",
   "devDependencies": {
-    "@idraw/types": "^0.3.2-alpha.0"
+    "@idraw_zyh/types": "^0.3.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "5cc462b9206ea0e4e70b5183771dfbf694402483"
+  "gitHead": "962f3415532a4583ec3e04ab3c0efbb7f4ad6e31"
 }
