--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@idraw_zyh/core",
+  "name": "idraw_zyh_core",
   "version": "0.3.2",
   "description": "",
   "main": "dist/esm/index.js",
@@ -21,15 +21,15 @@
   "author": "zhuoyuhan",
   "license": "MIT",
   "devDependencies": {
-    "@idraw_zyh/types": "^0.3.2"
+    "idraw_zyh_types": "^0.3.2"
   },
   "dependencies": {
-    "@idraw_zyh/board": "^0.3.2",
-    "@idraw_zyh/renderer": "^0.3.2",
-    "@idraw_zyh/util": "^0.3.2"
+    "idraw_zyh_board": "^0.3.2",
+    "idraw_zyh_renderer": "^0.3.2",
+    "idraw_zyh_util": "^0.3.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "962f3415532a4583ec3e04ab3c0efbb7f4ad6e31"
+  "gitHead": "07c8ae8795517a0c94962bcc38a93e32e18cb5d5"
 }
