--- a/packages/idraw/package.json
+++ b/packages/idraw/package.json
@@ -21,14 +21,14 @@
   "author": "zhuoyuhan",
   "license": "MIT",
   "devDependencies": {
-    "@idraw_zyh/types": "^0.3.2"
+    "idraw_zyh_types": "^0.3.2"
   },
   "dependencies": {
-    "@idraw_zyh/core": "^0.3.2",
-    "@idraw_zyh/util": "^0.3.2"
+    "idraw_zyh_core": "^0.3.2",
+    "idraw_zyh_util": "^0.3.2"
   },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "962f3415532a4583ec3e04ab3c0efbb7f4ad6e31"
+  "gitHead": "07c8ae8795517a0c94962bcc38a93e32e18cb5d5"
 }
