--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@idraw_zyh/types",
+  "name": "idraw_zyh_types",
   "version": "0.3.2",
   "description": "",
   "main": "src/index.ts",
