--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "node ./scripts/dev.js",
     "dev:rollup": "node ./scripts/dev-rollup.js",
     "build": "npm run build:mod && npm run build:bundle && npm run build:min",
-    "build:bundle": "NODE_ENV=production BUILD_MODE=reset node ./scripts/build-bundle.js",
+    "build:bundle": "set NODE_ENV=production && set BUILD_MODE=reset && node ./scripts/build-bundle.js",
     "build:mod": "node ./scripts/build-module.js",
     "build:min": "node ./scripts/minify.js",
     "snapshot": "npm run build:bundle && node ./scripts/snapshot.js",
@@ -71,5 +71,9 @@
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
     "vite": "^2.7.10"
+  },
+  "dependencies": {
+    "@microsoft/tsdoc-config": "^0.16.2",
+    "uri-js": "^4.4.1"
   }
 }
